--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "covidhelper",
   "version": "1.0.0",
   "main": "bot/main.js",
-  "type":"module",
+  "type": "module",
   "repository": "https://github.com/viswanathsaj/covidhelper.git",
   "author": "Viswanath Saj <11457868+viswanathsaj@users.noreply.github.com>",
   "license": "BSD 3",
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "mongoose": "^5.12.9",
     "node-cron": "^3.0.0",
+    "node-emoji": "^1.10.0",
     "node-telegram-bot-api": "^0.53.0"
   },
   "devDependencies": {
